Fixing CSS overlap

--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -24,7 +24,7 @@ Version: 1.0
  * -------------------------------------------------------------------------------------------------
  */
 
-h1 {
+.rearwindow h1 {
 	font-size: 2em;
 	text-align: center;
 	font-weight: bold;
@@ -32,7 +32,7 @@ h1 {
 	letter-spacing: 3px;
 }
 
-img {
+.rearwindow img {
 	width: auto;
 	max-width: 100%;
 	height: auto;
@@ -61,7 +61,7 @@ img {
 	position: relative;
 }
 
-ul {
+.rearwindow ul {
  list-style: none;
  margin: 0;
  padding: 0;
